Controladores de Categoria-Cliente-ItemMenu andando, agregue excepciones y PedidoController v1 - sin terminar