@@ -1,18 +1,16 @@
 package com.example.demo.controllers;
-import com.example.demo.model.Cliente;
+
 import com.example.demo.dto.ClienteDTO;
 import com.example.demo.mappers.ClienteMapper;
-import com.example.demo.servicios.*;
-
-
-import java.util.List;
-import java.util.stream.Collectors;
-
+import com.example.demo.model.Cliente;
+import com.example.demo.servicios.IClienteService;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("/cliente")
@@ -32,75 +30,45 @@ public class ClienteController {
         List<Cliente> clientes = clienteService.obtenerTodosLosClientes();
 
         if (clientes.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+            return ResponseEntity.noContent().build();
         }
 
         List<ClienteDTO> clientesDTO = clientes.stream()
                 .map(clienteMapper::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(clientesDTO);
     }
 
     @PostMapping("/crearCliente")
     public ResponseEntity<ClienteDTO> crearNuevoCliente(@Valid @RequestBody ClienteDTO clienteDTO) {
-        try {
-            Cliente cliente = clienteMapper.convertirAEntidad(clienteDTO);
-            Cliente clienteGuardado = clienteService.crearCliente(cliente);
-            ClienteDTO clienteDTOGuardado = clienteMapper.convertirADTO(clienteGuardado);
+        Cliente cliente = clienteMapper.convertirAEntidad(clienteDTO);
+        Cliente clienteGuardado = clienteService.crearCliente(cliente);
+        ClienteDTO clienteDTOGuardado = clienteMapper.convertirADTO(clienteGuardado);
 
-            return ResponseEntity.status(HttpStatus.CREATED).body(clienteDTOGuardado);
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
-        }
+        return ResponseEntity.status(HttpStatus.CREATED).body(clienteDTOGuardado);
     }
 
     @PutMapping("/modificarCliente/{id}")
     public ResponseEntity<ClienteDTO> modificarCliente(@PathVariable int id, @Valid @RequestBody ClienteDTO clienteDTO) {
-        try {
-            if (!clienteService.existeCliente(id)) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
-            }
-
-            Cliente cliente = clienteMapper.convertirAEntidad(clienteDTO);
-            cliente.setId(id);
-            Cliente clienteModificado = clienteService.modificarCliente(cliente);
-            ClienteDTO clienteDTOModificado = clienteMapper.convertirADTO(clienteModificado);
-
-            return ResponseEntity.ok(clienteDTOModificado);
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
-        }
+        Cliente cliente = clienteMapper.convertirAEntidad(clienteDTO);
+        cliente.setId(id);
+        Cliente clienteModificado = clienteService.modificarCliente(cliente);
+        ClienteDTO clienteDTOModificado = clienteMapper.convertirADTO(clienteModificado);
+        return ResponseEntity.ok(clienteDTOModificado);
     }
 
     @DeleteMapping("/borrarCliente/{id}")
     public ResponseEntity<Void> eliminarCliente(@PathVariable int id) {
-        try {
-            if (!clienteService.existeCliente(id)) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-            }
-
-            clienteService.eliminarCliente(id);
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).build();
-        }
+        clienteService.eliminarCliente(id);
+        return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<ClienteDTO> buscarCliente(@PathVariable int id) {
-        try {
-            Cliente cliente = clienteService.obtenerClientePorId(id);
-
-            if (cliente == null) {
-                return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
-            }
-
-            ClienteDTO clienteDTO = clienteMapper.convertirADTO(cliente);
-            return ResponseEntity.ok(clienteDTO);
-        } catch (Exception ex) {
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(null);
-        }
+        Cliente cliente = clienteService.obtenerClientePorId(id);
+        ClienteDTO clienteDTO = clienteMapper.convertirADTO(cliente);
+        return ResponseEntity.ok(clienteDTO);
     }
 
     @GetMapping("/buscarPorNombre")
@@ -108,13 +76,14 @@ public class ClienteController {
         List<Cliente> clientes = clienteService.obtenerClientesPorNombre(nombre);
 
         if (clientes.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+            return ResponseEntity.noContent().build();
         }
 
         List<ClienteDTO> clientesDTO = clientes.stream()
                 .map(clienteMapper::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(clientesDTO);
     }
 }
+
